opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/core_kernel"
bug-reports: "https://github.com/janestreet/core_kernel/issues"
dev-repo: "git+https://github.com/janestreet/core_kernel.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "base"
  "bin_prot"
  "configurator"
  "fieldslib"
  "jane-street-headers"
  "ppx_assert"
  "ppx_base"
  "ppx_hash"
  "ppx_inline_test"
  "ppx_jane"
  "ppx_sexp_conv"
  "ppx_sexp_message"
  "sexplib"
  "splittable_random"
  "stdio"
  "typerep"
  "variantslib"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
]
depopts: [
  "base-native-int63"
]
available: [ ocaml-version >= "4.04.2" ]
descr: "
Industrial strength alternative to OCaml's standard library

The Core suite of libraries is an industrial strength alternative to
OCaml's standard library that was developed by Jane Street, the
largest industrial user of OCaml.

Core_kernel is the system-independent part of Core.
"
