opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/core_kernel"
bug-reports: "https://github.com/janestreet/core_kernel/issues"
dev-repo: "git+https://github.com/janestreet/core_kernel.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/core_kernel/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "bin_prot"
  "core"
  "int_repr"
  "parsexp"
  "ppx_jane"
  "ppx_js_style"
  "ppx_optcomp"
  "ppx_sexp_conv"
  "ppx_stable_witness"
  "sexplib"
  "univ_map"
  "uopt"
  "base-threads"
  "dune"               {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Industrial strength alternative to OCaml's standard library"
description: "
The Core suite of libraries is an industrial strength alternative to
OCaml's standard library that was developed by Jane Street, the
largest industrial user of OCaml.

Core_kernel is the system-independent part of Core.
"
