(rule (targets config.h rt-flags)
 (deps (:first_dep ../discover/discover.exe) thread_id.h)
 (action
  (run %{first_dep} -portable-int63 %{lib-available:base-native-int63})))

(install (section lib)
 (files (config.h as config_h/config.h) (thread_id.h as config_h/thread_id.h)
  (rt-flags as config_h/rt-flags)))

(library (name config_h) (public_name core_kernel.config_h)
 (preprocess (pps ppx_jane)))